--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "myRmdFunctions"]
 	path = myRmdFunctions
 	url = https://github.com/praveenbas/myRmdFunctions
+[submodule "myMiscFunc"]
+	path = myMiscFunc
+	url = https://github.com/praveenbas/myMiscFunc
